{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 96,
  "lineage": "e83ee2be-91f5-60a5-8f6e-a8cc951178a8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "appsubnet_NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-appsubnet",
            "location": "centralindia",
            "name": "vnet-appsubnet",
            "resource_group_name": "Cloud-Dev-RG",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastionsubnet_NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-bastionsubnet",
            "location": "centralindia",
            "name": "vnet-bastionsubnet",
            "resource_group_name": "Cloud-Dev-RG",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dbsubnet_NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-dbsubnet",
            "location": "centralindia",
            "name": "vnet-dbsubnet",
            "resource_group_name": "Cloud-Dev-RG",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "websubnet_NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-websubnet",
            "location": "centralindia",
            "name": "vnet-websubnet",
            "resource_group_name": "Cloud-Dev-RG",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "appsubnet_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-appsubnet/securityRules/appsubnet_rule_22",
            "name": "appsubnet_rule_22",
            "network_security_group_name": "vnet-appsubnet",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.appsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-appsubnet/securityRules/appsubnet_rule_3389",
            "name": "appsubnet_rule_3389",
            "network_security_group_name": "vnet-appsubnet",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.appsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-appsubnet/securityRules/appsubnet_rule_443",
            "name": "appsubnet_rule_443",
            "network_security_group_name": "vnet-appsubnet",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.appsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "140",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-appsubnet/securityRules/appsubnet_rule_80",
            "name": "appsubnet_rule_80",
            "network_security_group_name": "vnet-appsubnet",
            "priority": 140,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.appsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastionsubnet_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-bastionsubnet/securityRules/bastionsubnet_rule_22",
            "name": "bastionsubnet_rule_22",
            "network_security_group_name": "vnet-bastionsubnet",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastionsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-bastionsubnet/securityRules/bastionsubnet_rule_3389",
            "name": "bastionsubnet_rule_3389",
            "network_security_group_name": "vnet-bastionsubnet",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastionsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-bastionsubnet/securityRules/bastionsubnet_rule_443",
            "name": "bastionsubnet_rule_443",
            "network_security_group_name": "vnet-bastionsubnet",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastionsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "140",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-bastionsubnet/securityRules/bastionsubnet_rule_80",
            "name": "bastionsubnet_rule_80",
            "network_security_group_name": "vnet-bastionsubnet",
            "priority": 140,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastionsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "dbsubnet_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-dbsubnet/securityRules/websubnet_rule_22",
            "name": "websubnet_rule_22",
            "network_security_group_name": "vnet-dbsubnet",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.dbsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-dbsubnet/securityRules/websubnet_rule_3389",
            "name": "websubnet_rule_3389",
            "network_security_group_name": "vnet-dbsubnet",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.dbsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-dbsubnet/securityRules/websubnet_rule_443",
            "name": "websubnet_rule_443",
            "network_security_group_name": "vnet-dbsubnet",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.dbsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "140",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-dbsubnet/securityRules/websubnet_rule_80",
            "name": "websubnet_rule_80",
            "network_security_group_name": "vnet-dbsubnet",
            "priority": 140,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.dbsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "websubnet_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-websubnet/securityRules/websubnet_rule_22",
            "name": "websubnet_rule_22",
            "network_security_group_name": "vnet-websubnet",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.websubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-websubnet/securityRules/websubnet_rule_3389",
            "name": "websubnet_rule_3389",
            "network_security_group_name": "vnet-websubnet",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.websubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-websubnet/securityRules/websubnet_rule_443",
            "name": "websubnet_rule_443",
            "network_security_group_name": "vnet-websubnet",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.websubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "140",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-websubnet/securityRules/websubnet_rule_80",
            "name": "websubnet_rule_80",
            "network_security_group_name": "vnet-websubnet",
            "priority": 140,
            "protocol": "Tcp",
            "resource_group_name": "Cloud-Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.websubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.16.0/20"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-appsubnet",
            "name": "vnet-appsubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Cloud-Dev-RG",
            "virtual_network_name": "Cloud-Dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.48.0/20"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-bastionsubnet",
            "name": "vnet-bastionsubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Cloud-Dev-RG",
            "virtual_network_name": "Cloud-Dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.32.0/20"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-dbsubnet",
            "name": "vnet-dbsubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Cloud-Dev-RG",
            "virtual_network_name": "Cloud-Dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/20"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-websubnet",
            "name": "vnet-websubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Cloud-Dev-RG",
            "virtual_network_name": "Cloud-Dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "associteappsubnetnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-appsubnet",
            "network_security_group_id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-appsubnet",
            "subnet_id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.appsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "associtebastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-bastionsubnet",
            "network_security_group_id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-bastionsubnet",
            "subnet_id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastionsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "associtedbsubnetnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-dbsubnet",
            "network_security_group_id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-dbsubnet",
            "subnet_id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.dbsubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "associtewebsubnetnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-websubnet",
            "network_security_group_id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-websubnet",
            "subnet_id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.websubnet_NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "44f8f2f9-8866-4c34-a8ac-eff078cf0855",
            "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet",
            "location": "centralindia",
            "name": "Cloud-Dev-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "Cloud-Dev-RG",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/20"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-websubnet",
                "name": "vnet-websubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-websubnet"
              },
              {
                "address_prefixes": [
                  "10.0.16.0/20"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-appsubnet",
                "name": "vnet-appsubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-appsubnet"
              },
              {
                "address_prefixes": [
                  "10.0.32.0/20"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-dbsubnet",
                "name": "vnet-dbsubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-dbsubnet"
              },
              {
                "address_prefixes": [
                  "10.0.48.0/20"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/virtualNetworks/Cloud-Dev-vnet/subnets/vnet-bastionsubnet",
                "name": "vnet-bastionsubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/a96db7f9-f077-48d6-9d2e-68075185bc77/resourceGroups/Cloud-Dev-RG/providers/Microsoft.Network/networkSecurityGroups/vnet-bastionsubnet"
              }
            ],
            "tags": {
              "Environment": "Dev",
              "owners": "Cloud"
            }
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    }
  ]
}